<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techgig.wallet.SignUp">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/signUp_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/signUp_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:hint="@string/action_user_name"
                   android:id="@+id/userName"
                   android:inputType="text"
                   android:maxLines="1"
                   />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/userEmail"
                    android:hint="@string/action_user_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/userPassword"
                    android:hint="@string/action_user_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/reUserPassword"
                    android:hint="@string/action_user_re_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/userWalletPassword"
                    android:hint="@string/action_user_wallet_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/reWalletPassword"
                    android:hint="@string/action_user_re_wallet_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/userSignUp"
                        android:text="@string/action_sign_up"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/userLogIn"
                        android:text="@string/action_sign_in"
                        />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
